--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,10 @@
 /lib
 /classes
 /checkouts
+/doc
 pom.xml
 pom.xml.asc
 *.jar
 *.class
-.lein-deps-sum
-.lein-failures
-.lein-plugins
-.lein-repl-history
+.lein-*
+.nrepl-*
